--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,19 @@
 spring.application.name=megacitycab
+server.port=8080
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/mega_city_cab
 spring.datasource.username=root
 spring.datasource.password=d2s4nw1j3k00n
+spring.security.user.name=admin
+spring.security.user.password=admin
+
+#spring.security.basic.enabled=false
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate (JPA) Configuration
-#Sspring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.mvc.view.prefix=/WEB-INF/views/
