--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/mega_city_cab
 spring.datasource.username=root
 spring.datasource.password=d2s4nw1j3k00n
-spring.security.user.name=admin
-spring.security.user.password=admin
+spring.security.appUser.name=admin
+spring.security.appUser.password=admin
 
 #spring.security.basic.enabled=false
 
