role based login

--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,14 @@
         </dependency>
 
         <!-- Spring Boot Security -->
+        <!-- <dependency>
+             <groupId>org.springframework.boot</groupId>
+             <artifactId>spring-boot-starter-security</artifactId>
+         </dependency>-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>6.4.2</version>
         </dependency>
 
         <!-- Spring Boot Data JPA -->
@@ -44,11 +49,7 @@
         </dependency>
 
         <!-- Jakarta Servlet API for JSP -->
-        <dependency>
-            <groupId>jakarta.servlet</groupId>
-            <artifactId>jakarta.servlet-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
