--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=megacitycab
 server.port=8080
 # Database Configuration
 #
-spring.datasource.url=jdbc:postgresql://localhost:5433/megacitycab
+spring.datasource.url=jdbc:postgresql://localhost:5433/car-booking-system
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=m1512
